--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.0.0",
-    "@prisma/client": "7.0.0",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.503.0",
     "next": "16.0.7",
@@ -28,7 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "postcss": "^8",
-    "prisma": "7.0.0",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.19.2",
     "typescript": "^5"
